Multicloud AoU cloud selection radio button functionality